samples/_failures_safe/1761539907_3bdab5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1ec03968.c: In function ‘dijkstra_shortest_path’:
./samples/SAFE/__tmp_1ec03968.c:159:5: error: expected declaration or statement at end of input
  159 |     } else {
      |     ^
./samples/SAFE/__tmp_1ec03968.c:159:5: error: expected declaration or statement at end of input
